# wheel_quadruped_genesis_with_ros2

./: README.md  README_zh.md  wheel_quadruped_genesis_with_ros2.code-workspace  使用指南.md
assets/mjcf/CJ-003/: CJ-003-pointfoot.xml  CJ-003-wheelfoot.xml
debug_record/: record_1.md
locomotion/: model_test.py  wheel_legged_eval_ros2.py  wheel_legged_train_ros2.py
locomotion/wheel_legged_env/: __init__.py  command_manager.py  curriculum_learning.py  domain_randomization.py  env_supports.md  env_utils.py  observation_manager.py  reward_functions.py  robot_controller.py  robot_properties_manager.py  scene_manager.py  simulation_manager.py  termination_manager.py  wheel_legged_env.md  wheel_legged_env.py
logs/: analyze_results.md
logs/wheel-quadruped-walking/: cfgs.pkl  events.out.tfevents.1761503704.Karenina.2537132.0
ros2_ws/src/: wheel_quadruped_ros.md
ros2_ws/src/wheel_quadruped_ros/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_quadruped_ros/launch/: wheel_quadruped.launch.py
ros2_ws/src/wheel_quadruped_ros/msg/: RobotCommand.msg  RobotState.msg
ros2_ws/src/wheel_quadruped_ros/scripts/: evaluation_node.py  training_node.py  wheel_quadruped_node.py
ros2_ws/src/wheel_quadruped_ros/srv/: TrainControl.srv
rsl_rl/rsl_rl/runners/: on_policy_runner.py
utils/: gamepad.py
